fix(comments): fixed alignment, css

--- a/app/modules/hcs/install-files/install-files.scss
+++ b/app/modules/hcs/install-files/install-files.scss
@@ -73,7 +73,7 @@
 
   footer.install-file-footer {
     background-color: #f5f5f5;
-    padding: .4375rem 1.5rem .375rem;
+    padding: .5rem 1.5rem .375rem;
     .footer-item {
       float: right;
       margin-left: 0.75rem;
